src/css/docusaurus.scss
.main-wrapper {
  position: relative;
}

.footer__copyright {
  color: var(--ifm-footer-link-color);
  font-size: 80%;
}

@media screen and (min-width: 996px) {
  .footer__copyright {
    padding: 4rem 0 0;
  }
}

